Use declared constructor to create a new instance.