@@ -60,7 +60,7 @@ public final class TranscoderFactory
   protected static ValueTranscoder<?> createValueTranscoder(final String type)
   {
     try {
-      return (ValueTranscoder<?>) Class.forName(type).newInstance();
+      return (ValueTranscoder<?>) Class.forName(type).getDeclaredConstructor().newInstance();
     } catch (Exception e) {
       throw new IllegalArgumentException("Could not instantiate transcoder", e);
     }
